--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": ">=7.2.0",
         "ext-json": "*",
-        "ulrichsg/getopt-php": "^3.3"
+        "ulrichsg/getopt-php": "^3.3",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.5"
