--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=7.2.0",
         "ext-json": "*",
         "ulrichsg/getopt-php": "^3.3",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "symfony/dotenv": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.5"
